# kimi-search-mcp-rs

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: release.yml
src/: main.rs
